# ML-LLM-Q-Gonality-Modular-Curves

./: .gitignore  README.md  pyproject.toml
config/: modular.toml
data/Cross-Validation-Data/: level_big.csv  q_gonality_diff.csv  test_data.csv  valid_fold_0.csv  valid_fold_1.csv  valid_fold_2.csv  valid_fold_3.csv  valid_fold_4.csv  valid_small.csv
models/FT-Transformer/: FT.py  FT_data.py
models/FT_Transformer/: FT.py  FT_data.py  FT_experiment.py  FT_experiment_OOT.py  __init__.py
models/LLM_Boost/: config_parse.py  data_process_fun.py  linear_boost_model.py  main.py  string_manipulation.py  utility_fun.py
models/LLM_Boost/prompts/: feature_extraction.txt
models/NN_model/: Find_Root_Path.py  NN_Accuracy.py  NN_Classical_Train_and_Main.py  NN_Network_and_Dataset_Classes.py  NN_Plotter_and_Log_classes.py  NN_Preparation_Functions.py  NN_Saving_Classes.py  NN_Weakly_Train_and_Main.py
models/Tree_model/: model_tree.py  train_xgb.py
notebooks/: data_experiment.ipynb  visual_data.ipynb
src/: create_CV.py  evaluation.py
src/utils/: AddColumnNamesToDataFiles.py  data_process.py  fetch data.py  get_config.py  load_data.py  load_data_2.py  obtainDataModularCurvesData.py
